--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "build": ""
   },
   "dependencies": {
-    "nodemon": "^1.17.1",
-    "turbo360": "latest",
-    "vertex360": "latest",
     "accepts": "^1.3.5",
     "array-flatten": "1.1.1",
     "body-parser": "1.18.2",
@@ -28,6 +25,7 @@
     "fresh": "0.5.2",
     "merge-descriptors": "1.0.1",
     "methods": "^1.1.2",
+    "nodemon": "^1.17.1",
     "on-finished": "^2.3.0",
     "parseurl": "^1.3.2",
     "path-to-regexp": "0.1.7",
@@ -40,9 +38,13 @@
     "serve-static": "1.13.2",
     "setprototypeof": "1.1.0",
     "statuses": "^1.4.0",
+    "turbo": "^0.1.2",
+    "turbo-cli": "^0.30.13",
+    "turbo360": "latest",
     "type-is": "^1.6.16",
     "utils-merge": "1.0.1",
-    "vary": "^1.1.2"
+    "vary": "^1.1.2",
+    "vertex360": "latest"
   },
   "devDependencies": {
     "express": "latest"
